--- a/styles.css
+++ b/styles.css
@@ -38,13 +38,13 @@ p {
   img {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
-    border-bottom-left-radius: 0px !important;
+    border-bottom-left-radius: 0px;
   }
 }
 @media (min-width: 767px) {
   img {
     border-top-left-radius: 5px;
     border-top-right-radius: 0px;
-    border-bottom-left-radius: 5px !important;
+    border-bottom-left-radius: 5px;
   }
 }
